<resources>
    <string name="app_name">VK Infinity</string>
    <integer name="com_vk_sdk_AppId">5168206</integer>

    <string name="online">Online</string>
    <string name="offline">Offline</string>

    <drawable name="flag">@drawable/en</drawable>
    <string name="Cancel">Cancel</string>

    <string name="settingsText">Settings</string>

    <string name="serviceText">Service</string>
    <string name="langText">Language</string>

    <string name="scheduleText">Schedule</string>
    <string name="scheduleUnit">min</string>
    <string name="scheduleWarning">Recommended from 5 to 15 minutes</string>

    <string name="helpText">Help</string>
    <string name="logText">Log</string>
    <string name="aboutText">About</string>

    <string name="logoutButton">LOG OUT</string>

    <string name="Network">No Internet connection</string>
    <string name="AuthErr">User didn\'t pass Authorization</string>

    <string name="Connected">VKI: Connected as&#160;</string>
    <string name="Disconnected">VKI: Service stopped</string>

    <string name="Yes">Yes</string>
    <string name="Try">Try</string>

    <string name="logoutMessage">Are you sure want logout?</string>
    <string name="aboutMessage">The program is to maintain the status vkontakte online, if there is an Internet connection on your device.</string>

    <string name="refreshText">Refreshed</string>

    <string name="refreshButton">Refresh</string>
    <string name="clearButton">Clear</string>

    <string name="clearHistory">Clear history?</string>
</resources>
