<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_marginTop="-3dp"
                app:cardBackgroundColor="@color/background"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/userLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/background_light"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                            <FrameLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageView
                                    android:id="@+id/iwAvatar"
                                    android:layout_width="72dp"
                                    android:layout_height="72dp"
                                    android:layout_gravity="center"
                                    android:background="@color/background"
                                    android:scaleType="fitCenter" />

                                <ImageView
                                    android:id="@+id/iwCircle"
                                    android:layout_width="72dp"
                                    android:layout_height="72dp"
                                    android:src="@drawable/circle" />
                            </FrameLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvUser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/mainText"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvOnline"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/text" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/loginLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:background="@drawable/buttons"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/loginText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/loginBtnLogin"
                            android:textColor="@color/title"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_marginTop="3dp"
                app:cardBackgroundColor="@color/background"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:id="@+id/settingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/settingsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/settingsText"
                        android:textColor="@color/title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/serviceLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttons"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/serviceImage"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="15dp"
                            android:scaleType="fitCenter"
                            android:src="@android:drawable/ic_menu_preferences" />

                        <TextView
                            android:id="@+id/serviceText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/serviceText"
                            android:textColor="@color/mainText"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iwOnOff"
                            android:layout_width="48dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/switch_off" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/langLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/buttons"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/languageImage"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="15dp"
                            android:scaleType="fitCenter"
                            android:src="@android:drawable/ic_menu_mapmode" />

                        <TextView
                            android:id="@+id/langText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/langText"
                            android:textColor="@color/mainText"
                            android:textSize="16sp" />

                        <ImageView
                            android:id="@+id/iwLang"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="20dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/en" />

                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="-3dp"
                android:layout_marginRight="-3dp"
                android:layout_marginTop="3dp"
                app:cardBackgroundColor="@color/background"
                app:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:id="@+id/helpLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/helpText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/helpText"
                        android:textColor="@color/title"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/logLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/buttons"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/logImage"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="15dp"
                            android:scaleType="fitCenter"
                            android:src="@android:drawable/ic_menu_recent_history" />

                        <TextView
                            android:id="@+id/logText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/logText"
                            android:textColor="@color/mainText"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/aboutLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/buttons"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/aboutImage"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="15dp"
                            android:layout_marginLeft="25dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="15dp"
                            android:scaleType="fitCenter"
                            android:src="@android:drawable/ic_menu_info_details" />

                        <TextView
                            android:id="@+id/aboutText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/aboutText"
                            android:textColor="@color/mainText"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>